feat: projects page layout completed

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
 VITE_API_URL=
+VITE_IMG_URL=
+
+VITE_BEHANCE_LINK=
+VITE_LINKEDIN_LINK=
+VITE_MAIL_LINK=
+VITE_PHONE_LINK=
+VITE_GITHUB_LINK=
+VITE_INSTAGRAM_LINK=
+VITE_TIKTOK_LINK=
